<resources>
    <string name="app_name">STUDY</string>
    <string name="forget_password"><a href="">忘记密码</a></string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="name"></string>
    <string name="register_user"></string>
    <string name="register_password1"></string>
    <string name="register_password2"></string>
    <string name="register_email"></string>
    <string name="register_phone"></string>
    <string name="register_adress"></string>
    <string name="myclass1"></string>
    <string name="myclass2"></string>
    <string name="myclass3"></string>
    <string name="myclass4"></string>
    <string name="myclass5"></string>
    <string name="myclass6"></string>
    <string name="myclass7"></string>
    <string name="myclass8"></string>
    <string name="myclass9"></string>
    <string name="myclass10"></string>
    <string name="myclass11"></string>
    <string name="myclass12"></string>
    <string name="myclass13"></string>
    <string name="myclass14"></string>
    <string name="myclass15"></string>
    <string name="myclass16"></string>
    <string name="myclass17"></string>
    <string name="myclass18"></string>
    <string name="myclass19"></string>
    <string name="myclass20"></string>
    <string name="myclass21"></string>
    <string name="myclass22"></string>
    <string name="myclass23"></string>
    <string name="myclass24"></string>
    <string name="myclass25"></string>
    <string name="myclass26"></string>
    <string name="myclass27"></string>
    <string name="myclass28"></string>
    <string name="myclass29"></string>
    <string name="myclass30"></string>
    <string name="myclass31"></string>
    <string name="myclass32"></string>
    <string name="myclass33"></string>
    <string name="myclass34"></string>
    <string name="myclass35"></string>
    <string name="myclass36"></string>
    <string name="myclass37"></string>
    <string name="myclass38"></string>
    <string name="myclass39"></string>
    <string name="myclass40"></string>
    <string name="myclass41"></string>
    <string name="myclass42"></string>
    <string name="myclass43"></string>
    <string name="myclass44"></string>
    <string name="myclass45"></string>
    <string name="myclass46"></string>
    <string name="myclass47"></string>
    <string name="myclass48"></string>
    <string name="myclass49"></string>
    <string name="myclass50"></string>
    <string name="myclass51"></string>
    <string name="myclass52"></string>
    <string name="myclass53"></string>
    <string name="myclass54"></string>
    <string name="myclass55"></string>
    <string name="myclass56"></string>
    <string name="myclass57"></string>
    <string name="myclass58"></string>
    <string name="myclass59"></string>
    <string name="myclass60"></string>
    <string name="myclass61"></string>
    <string name="myclass62"></string>
    <string name="myclass63"></string>
    <string name="myclass64"></string>
    <string name="myclass65"></string>
    <string name="myclass66"></string>
    <string name="myclass67"></string>
    <string name="myclass68"></string>
    <string name="myclass69"></string>
    <string name="myclass70"></string>
    <string name="myclass71"></string>
    <string name="myclass72"></string>
    <string name="myclass73"></string>
    <string name="myclass74"></string>
    <string name="myclass75"></string>
    <string name="myclass76"></string>
    <string name="myclass77"></string>
    <string name="myclass78"></string>
    <string name="myclass79"></string>
    <string name="myclass80"></string>
    <string name="search"></string>
    <string name="begin_stars"></string>
    <string name="class1"></string>
    <string name="class2"></string>
    <string name="class3"></string>
    <string name="class4"></string>
    <string name="class5"></string>
    <string name="class6"></string>
    <string name="class7"></string>
    <string name="class8"></string>
    <string name="class9"></string>
    <string name="class10"></string>
    <string name="class11"></string>
    <string name="class12"></string>
    <string name="class13"></string>
    <string name="class14"></string>
    <string name="class15"></string>
    <string name="class16"></string>
    <string name="class17"></string>
    <string name="class18"></string>
    <string name="class19"></string>
    <string name="class20"></string>
    <string name="class21"></string>
    <string name="class22"></string>
    <string name="class23"></string>
    <string name="class24"></string>
    <string name="class25"></string>
    <string name="class26"></string>
    <string name="class27"></string>
    <string name="class28"></string>
    <string name="class29"></string>
    <string name="class30"></string>
    <string name="class31"></string>
    <string name="class32"></string>
    <string name="class33"></string>
    <string name="class34"></string>
    <string name="class35"></string>
    <string name="class36"></string>
    <string name="class37"></string>
    <string name="class38"></string>
    <string name="class39"></string>
    <string name="class40"></string>
    <string name="class41"></string>
    <string name="class42"></string>
    <string name="class43"></string>
    <string name="class44"></string>
    <string name="class45"></string>
    <string name="class46"></string>
    <string name="class47"></string>
    <string name="class48"></string>
    <string name="class49"></string>
    <string name="class50"></string>
    <string name="class51"></string>
    <string name="class52"></string>
    <string name="class53"></string>
    <string name="class54"></string>
    <string name="class55"></string>
    <string name="class56"></string>
    <string name="class57"></string>
    <string name="class58"></string>
    <string name="class59"></string>
    <string name="class60"></string>
    <string name="class61"></string>
    <string name="class62"></string>
    <string name="class63"></string>
    <string name="class64"></string>
    <string name="class65"></string>
    <string name="class66"></string>
    <string name="class67"></string>
    <string name="class68"></string>
    <string name="class69"></string>
    <string name="class70"></string>
    <string name="class71"></string>
    <string name="class72"></string>
    <string name="class73"></string>
    <string name="class74"></string>
    <string name="class75"></string>
    <string name="class76"></string>
    <string name="class77"></string>
    <string name="class78"></string>
    <string name="class79"></string>
    <string name="class80"></string>
    <string name="content1"></string>
    <string name="content2"></string>
    <string name="content3"></string>
    <string name="content4"></string>
    <string name="content5"></string>
    <string name="content6"></string>
    <string name="content7"></string>
    <string name="content8"></string>
    <string name="content9"></string>
    <string name="content10"></string>
    <string name="content11"></string>
    <string name="content12"></string>
    <string name="content13"></string>
    <string name="content14"></string>
    <string name="content15"></string>
    <string name="content16"></string>
    <string name="content17"></string>
    <string name="content18"></string>
    <string name="content19"></string>
    <string name="content20"></string>
    <string name="content21"></string>
    <string name="content22"></string>
    <string name="content23"></string>
    <string name="content24"></string>
    <string name="content25"></string>
    <string name="content26"></string>
    <string name="content27"></string>
    <string name="content28"></string>
    <string name="content29"></string>
    <string name="content30"></string>
    <string name="content31"></string>
    <string name="content32"></string>
    <string name="content33"></string>
    <string name="content34"></string>
    <string name="content35"></string>
    <string name="content36"></string>
    <string name="content37"></string>
    <string name="content38"></string>
    <string name="content39"></string>
    <string name="content40"></string>
    <string name="content41"></string>
    <string name="content42"></string>
    <string name="content43"></string>
    <string name="content44"></string>
    <string name="content45"></string>
    <string name="content46"></string>
    <string name="content47"></string>
    <string name="content48"></string>
    <string name="content49"></string>
    <string name="content50"></string>
    <string name="content51"></string>
    <string name="content52"></string>
    <string name="content53"></string>
    <string name="content54"></string>
    <string name="content55"></string>
    <string name="content56"></string>
    <string name="content57"></string>
    <string name="content58"></string>
    <string name="content59"></string>
    <string name="content60"></string>
    <string name="content61"></string>
    <string name="content62"></string>
    <string name="content63"></string>
    <string name="content64"></string>
    <string name="content65"></string>
    <string name="content66"></string>
    <string name="content67"></string>
    <string name="content68"></string>
    <string name="content69"></string>
    <string name="content70"></string>
    <string name="content71"></string>
    <string name="content72"></string>
    <string name="content73"></string>
    <string name="content74"></string>
    <string name="content75"></string>
    <string name="content76"></string>
    <string name="content77"></string>
    <string name="content78"></string>
    <string name="content79"></string>
    <string name="content80"></string>
    <string name="begin_password1"></string>
    <string name="begin_password2"></string>
    <string name="begin_email"></string>
    <string name="begin_phone"></string>
    <string name="begin_adress"></string>
    <string name="message1"></string>
    <string name="message2"></string>
    <string name="message3"></string>
    <string name="message4"></string>
    <string name="message5"></string>
    <string name="message6"></string>
    <string name="message7"></string>
    <string name="message8"></string>
    <string name="message9"></string>
    <string name="message10"></string>
    <string name="message11"></string>
    <string name="message12"></string>
    <string name="message13"></string>
    <string name="message14"></string>
    <string name="message15"></string>
    <string name="message16"></string>
    <string name="message17"></string>
    <string name="message18"></string>
    <string name="message19"></string>
    <string name="message20"></string>
    <string name="message21"></string>
    <string name="message22"></string>
    <string name="message23"></string>
    <string name="message24"></string>
    <string name="message25"></string>
    <string name="message26"></string>
    <string name="message27"></string>
    <string name="message28"></string>
    <string name="message29"></string>
    <string name="message30"></string>
    <string name="message31"></string>
    <string name="message32"></string>
    <string name="message33"></string>
    <string name="message34"></string>
    <string name="message35"></string>
    <string name="message36"></string>
    <string name="message37"></string>
    <string name="message2_myquestion"></string>
    <string name="message2_answer"></string>
    <string name="message2_reason"></string>
    <string name="elective_class"></string>
    <string name="elective2class1"></string>
    <string name="elective2class2"></string>
    <string name="elective2class3"></string>
    <string name="elective2content1"></string>
    <string name="elective2content2"></string>
    <string name="elective2content3"></string>
    <string name="elective2number1"></string>
    <string name="elective2number2"></string>
</resources>