<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@mipmap/img3"
    tools:context=".elective2">

    <!--点击进入按钮会进入classinformation-->
    <TextView
        android:id="@+id/elective_class"
        android:text="@string/elective_class"
        android:background="#00BCD4"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:id="@+id/classinformation_list"
        android:layout_marginTop="5dp"
        android:layout_below="@id/elective_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#2196F3"
        >
        <TextView
            android:layout_width="10dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="10sp"
            android:text="序号"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="名  称"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:text="待解答数"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            android:text="是否进入"/>
    </LinearLayout>
    <ScrollView
        android:layout_below="@id/classinformation_list"
        android:id="@+id/scrolview"
        android:layout_marginTop="10dp"
        android:background="@mipmap/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--可以通过设置scrollview的最大显示来设置显示的内容为课程的数目-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                >
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:background="#3FB57E"
                    android:gravity="center"
                    android:textColor="#ff00"
                    android:textStyle="bold"
                    android:text="@string/elective2number1"
                    />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="30dp"
                   android:singleLine="true"
                   android:background="#3F59B5"
                   android:gravity="center"
                   android:layout_weight="1"
                   android:text="@string/elective2class1"
                   />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:background="#3A9AB7"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/elective2content1"
                    />
                <Button
                    android:layout_marginLeft="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="进入"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="#ffff"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:background="#3F59B5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                >
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:background="#3FB57E"
                    android:gravity="center"
                    android:textColor="#ff00"
                    android:textStyle="bold"
                    android:text="@string/elective2number2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:background="#3F59B5"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/elective2class2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:background="#3A9AB7"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/elective2content2"
                    />
                <Button
                    android:layout_marginLeft="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="进入"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="#ffff"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:background="#3F59B5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                >
                <TextView
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:background="#3FB57E"
                    android:gravity="center"
                    android:textColor="#ff00"
                    android:textStyle="bold"
                    android:text="@string/elective2number1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:background="#3F59B5"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/elective2class3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:singleLine="true"
                    android:background="#3A9AB7"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:text="@string/elective2content3"
                    />
                <Button
                    android:layout_marginLeft="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="进入"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="#ffff"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_gravity="right"
                    android:background="#3F59B5"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>