<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/img3"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">
    <!--登陆界面的pku图标展示-->
    <ImageView
    android:layout_width="180dp"
    android:layout_height="180dp"
    android:src="@mipmap/pku"
    android:layout_above="@id/user"
    android:layout_centerHorizontal="true"
    android:paddingBottom="30dp"/>
    <!--编辑用户名-->
   <EditText
       android:id="@+id/user"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_centerVertical="true"
       android:layout_centerHorizontal="true"
       android:ems="16"
       android:textSize="28sp"
       android:hint="手机/邮箱/微信"
       android:drawableLeft="@mipmap/user"/>
    <!--编辑密码-->
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:ems="16"
        android:textSize="28sp"
        android:hint="6-16个字母/数字"
        android:layout_below="@id/user"
        android:inputType="textPassword"
        android:drawableLeft="@mipmap/password"/>
    <!--只是用来占据空格-->
   <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/password" />
    <!--注册-->
    <Button
        android:id="@+id/login2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:textSize="24sp"
        android:layout_margin="3dp"
        android:background="#009688"
        android:textColor="#FFFFFF"
        android:text="@string/register"
        android:layout_toLeftOf="@id/text" />
    <!--登陆-->
    <Button
        android:id="@+id/login1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:background="#009688"
        android:text="@string/login"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_margin="3dp"
        android:layout_toLeftOf="@id/login2" />
    <!--忘记密码-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:layout_below="@id/login2"
        android:layout_toLeftOf="@id/text"/>
</RelativeLayout>