<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@mipmap/img3"
    tools:context=".message2">
    <!--接收到别人为我的解答，当我接受该解答之后将撤销问题数量，
    即为不标注他是未解答，但是应该还可以展示再课程的问题列表最下方，
    标注为已经解答-->
    <!--点击同意或者不同意都将进入我的消息界面，点击的不同意或者同意或者加入收藏夹应当有一个弹出提示框-->
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#1A2A85"
        android:text="我的问题"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center" />
    <!--我之前的问题展示-->
    <TextView
        android:text="@string/message2_myquestion"
        android:layout_marginTop="5dp"
        android:layout_below="@id/question"
        android:id="@+id/question_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="#E2DCDC"
        />
    <!--一个显示文本框而已不必改变-->
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/get_answer"
        android:layout_below="@id/question_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="得到的回答"
        android:textColor="#1A2A85"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"/>
    <!--别人的回答展示-->
    <TextView
        android:text="@string/message2_answer"
        android:id="@+id/message2_answer"
        android:layout_marginTop="5dp"
        android:layout_below="@id/get_answer"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="#E2DCDC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!--不必管-->
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/beacause1"
        android:layout_below="@id/message2_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="我的回应"
        android:textColor="#1A2A85"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"/>
    <!--我的回应-->
    <TextView
        android:text="@string/message2_reason"
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/beacause1"
        android:background="#E2DCDC"
        android:textSize="20sp"
        android:textStyle="bold"
        android:hint="同意：可以不填也可以赞美该同学的解答不同意：填写不同意的理由也可以不填，之后再点击不同意按钮"/>
    <!--同意-->
    <Button
        android:id="@+id/yes"
        android:text="同意"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:layout_marginTop="10dp"
        android:background="#00BCD4"
        android:layout_alignParentStart="true"
        android:layout_below="@id/reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--加入收藏夹-->
    <Button
        android:id="@+id/save"
        android:text="添加至收藏夹"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:layout_marginTop="10dp"
        android:background="#00BCD4"
        android:layout_below="@id/reason"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--不同意-->
    <Button
        android:id="@+id/no"
        android:text="不同意"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:layout_marginTop="10dp"
        android:background="#00BCD4"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>